--- a/manifest.json
+++ b/manifest.json
@@ -1,37 +1,98 @@
 {
-  "name": "Epic Converter - LUANSysten™",
-  "short_name": "Epic Converter",
-  "description": "Conversor de monedas venezolano profesional con tasas en tiempo real",
-  "start_url": "/",
+  "name": "VenezuelaCambio Pro - LUAN System™",
+  "short_name": "VCPro",
+  "description": "Conversor de monedas venezolanas con tasas en tiempo real, calculadora personalizada y estadísticas avanzadas",
+  "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#0a0a0a",
-  "theme_color": "#C9975B",
+  "background_color": "#0f172a",
+  "theme_color": "#667eea",
   "orientation": "portrait-primary",
-  "scope": "/",
+  "scope": "./",
   "lang": "es-VE",
   "dir": "ltr",
-  "categories": ["finance", "business", "productivity"],
+  "categories": ["finance", "utilities", "productivity"],
   "icons": [
+    {
+      "src": "icons/icon-72.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icons/icon-96.png",
+      "sizes": "96x96",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icons/icon-128.png",
+      "sizes": "128x128",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icons/icon-144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icons/icon-152.png",
+      "sizes": "152x152",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
     {
       "src": "icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icons/icon-384.png",
+      "sizes": "384x384",
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "any maskable"
     }
   ],
-  "screenshots": [],
+  "screenshots": [
+    {
+      "src": "screenshots/screenshot1.png",
+      "sizes": "540x720",
+      "type": "image/png",
+      "form_factor": "narrow"
+    },
+    {
+      "src": "screenshots/screenshot2.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide"
+    }
+  ],
   "shortcuts": [
     {
       "name": "Convertir",
       "short_name": "Convertir",
-      "description": "Abrir conversor de monedas",
-      "url": "/",
+      "description": "Abrir convertidor principal",
+      "url": "./index.html",
+      "icons": [
+        {
+          "src": "icons/icon-192.png",
+          "sizes": "192x192"
+        }
+      ]
+    },
+    {
+      "name": "Estadísticas",
+      "short_name": "Stats",
+      "description": "Ver mis estadísticas",
+      "url": "./index.html?stats=true",
       "icons": [
         {
           "src": "icons/icon-192.png",
@@ -41,8 +102,17 @@
     }
   ],
   "share_target": {
-    "action": "/",
+    "action": "./index.html",
     "method": "GET",
-    "enctype": "application/x-www-form-urlencoded"
-  }
+    "enctype": "application/x-www-form-urlencoded",
+    "params": {
+      "title": "title",
+      "text": "text",
+      "url": "url"
+    }
+  },
+  "prefer_related_applications": false,
+  "related_applications": [],
+  "protocol_handlers": [],
+  "iarc_rating_id": ""
 }
